<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/zodiac_horo"
            android:icon="@drawable/ic_star"
            android:title="@string/zodiac_horoscope" />

        <item
            android:id="@+id/china_horo"
            android:icon="@drawable/ic_signs_china"
            android:title="@string/China_horoscope" />
        <item
            android:id="@+id/japan_horo"
            android:icon="@drawable/ic_japan"
            android:title="@string/Japan_horoscope" />
        <item
            android:id="@+id/maya_horo"
            android:icon="@drawable/ic_maya_pyramid"
            android:title="@string/Maya_horoscope" />

        <item
            android:id="@+id/druid_horo"
            android:icon="@drawable/ic_druid"
            android:title="@string/Druid_horoscope" />
        <item
            android:id="@+id/celtik_horo"
            android:icon="@drawable/ic_shapes_celtik"
            android:title="@string/Celtik_horoscope" />
        <item
            android:id="@+id/zoroastro_horo"
            android:icon="@drawable/ic_zoroastra"
            android:title="@string/Zoroastro_horoscope" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
</menu>